--- a/index.html
+++ b/index.html
@@ -4,9 +4,39 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>DoctorCare - Assistência Médica</title>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+		/>
+		<link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
 	</head>
 	<body>
-        
-    </body>
+		<h4>BOAS-VINDAS A DOCTORCARE 👋</h4>
+
+		<h1>Assistência médica simplificada para todos</h1>
+
+		<p>
+			Os médicos da DoctorCare vão além dos sintomas para tratar a causa
+			raiz de sua doença e proporcionar uma cura a longo prazo.
+		</p>
+
+		<button>
+			<i class="fa-brands fa-whatsapp"></i> AGENDE SUA CONSULTA
+		</button>
+
+		<img
+			src="img/mulher.png"
+			alt="mulher negra sorrindo vestida com uma blusa verde e com as duas maos no peito"
+		/>
+
+		<h3>+3.500</h3>
+		<p>Pacientes atendidos</p>
+
+		<h3>+15</h3>
+		<p>Especialistas disponíveis</p>
+
+		<h3>+10</h3>
+		<p>Anos no mercado</p>
+	</body>
 </html>
