--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
 		/>
 		<link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
+		<link rel="stylesheet" href="css/main.css" />
 	</head>
 	<body>
 		<h4>BOAS-VINDAS A DOCTORCARE 👋</h4>
