--- a/index.html
+++ b/index.html
@@ -13,31 +13,33 @@
 		<link rel="stylesheet" href="css/main.css" />
 	</head>
 	<body>
-		<h4>BOAS-VINDAS A DOCTORCARE 👋</h4>
+		<header>
+			<h4>BOAS-VINDAS A DOCTORCARE 👋</h4>
 
-		<h1>Assistência médica simplificada para todos</h1>
+			<h1>Assistência médica simplificada para todos</h1>
 
-		<p>
-			Os médicos da DoctorCare vão além dos sintomas para tratar a causa
-			raiz de sua doença e proporcionar uma cura a longo prazo.
-		</p>
+			<p>
+				Os médicos da DoctorCare vão além dos sintomas para tratar a
+				causa raiz de sua doença e proporcionar uma cura a longo prazo.
+			</p>
 
-		<button>
-			<i class="fa-brands fa-whatsapp"></i> AGENDE SUA CONSULTA
-		</button>
+			<button>
+				<i class="fa-brands fa-whatsapp icone"></i> AGENDE SUA CONSULTA
+			</button>
 
-		<img
-			src="img/mulher.png"
-			alt="mulher negra sorrindo vestida com uma blusa verde e com as duas maos no peito"
-		/>
+			<img
+				src="img/mulher.png"
+				alt="mulher negra sorrindo vestida com uma blusa verde e com as duas maos no peito"
+			/>
 
-		<h3>+3.500</h3>
-		<p>Pacientes atendidos</p>
+			<h3>+3.500</h3>
+			<p>Pacientes atendidos</p>
 
-		<h3>+15</h3>
-		<p>Especialistas disponíveis</p>
+			<h3>+15</h3>
+			<p>Especialistas disponíveis</p>
 
-		<h3>+10</h3>
-		<p>Anos no mercado</p>
+			<h3>+10</h3>
+			<p>Anos no mercado</p>
+		</header>
 	</body>
 </html>
