--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
 		<link rel="stylesheet" href="css/main.css" />
 	</head>
 	<body>
-		<header>
+		<nav class="">
+			<div class="wrapper">
+				<a href="#" class="logo"
+					>Doctor<span class="logo-efeito">Care</span></a
+				>
+
+				<i class="fa-solid fa-bars menu"></i>
+			</div>
+		</nav>
+
+		<header class="wrapper">
 			<h4>BOAS-VINDAS A DOCTORCARE 👋</h4>
 
 			<h1>Assistência médica simplificada para todos</h1>
@@ -32,14 +42,22 @@
 				alt="mulher negra sorrindo vestida com uma blusa verde e com as duas maos no peito"
 			/>
 
-			<h3>+3.500</h3>
-			<p>Pacientes atendidos</p>
+			<div class="stats">
+				<div class="stat">
+					<h3>+3.500</h3>
+					<p>Pacientes atendidos</p>
+				</div>
 
-			<h3>+15</h3>
-			<p>Especialistas disponíveis</p>
+				<div class="stat">
+					<h3>+15</h3>
+					<p>Especialistas disponíveis</p>
+				</div>
 
-			<h3>+10</h3>
-			<p>Anos no mercado</p>
+				<div class="stat">
+					<h3>+10</h3>
+					<p>Anos no mercado</p>
+				</div>
+			</div>
 		</header>
 	</body>
 </html>
