--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
 		<link rel="stylesheet" href="css/main.css" />
 	</head>
-	<body onscroll="onScroll()" class="menu-expanded">
+	<body onscroll="onScroll()">
 		<nav id="nav">
 			<div class="wrapper">
 				<a class="logo" href="#">
