--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 					</ul>
 				</div>
 
-				<button class="open-menu">
+				<button onclick="openMenu()" class="open-menu">
 					<svg
 						width="40"
 						height="40"
@@ -125,7 +125,7 @@
 						/>
 					</svg>
 				</button>
-				<button class="close-menu">
+				<button onclick="closeMenu()" class="close-menu">
 					<svg
 						width="40"
 						height="40"
