update: html aria labels

--- a/index.html
+++ b/index.html
@@ -94,7 +94,12 @@
 					</ul>
 				</div>
 
-				<button onclick="openMenu()" class="open-menu">
+				<button
+					aria-expanded="false"
+					aria-label="Abrir menu"
+					onclick="openMenu()"
+					class="open-menu"
+				>
 					<svg
 						width="40"
 						height="40"
@@ -125,7 +130,12 @@
 						/>
 					</svg>
 				</button>
-				<button onclick="closeMenu()" class="close-menu">
+				<button
+					aria-expanded="true"
+					aria-label="Fechar menu"
+					onclick="closeMenu()"
+					class="close-menu"
+				>
 					<svg
 						width="40"
 						height="40"
